--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -33,19 +33,6 @@
                 android:padding="10dp">
 
                 <Button
-                    android:id="@+id/IncomeBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#7cad3e"
-                    android:elevation="10dp"
-                    android:fontFamily="@font/adamina"
-                    android:text="@string/income"
-                    android:textSize="25sp"
-                    app:layout_constraintEnd_toStartOf="@+id/ExpenseBtn"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <Button
                     android:id="@+id/ExpenseBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -54,10 +41,22 @@
                     android:fontFamily="@font/adamina"
                     android:text="@string/expense"
                     android:textSize="25sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/IncomeBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/IncomeBtn"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <Button
+                    android:id="@+id/IncomeBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#7cad3e"
+                    android:elevation="10dp"
+                    android:fontFamily="@font/adamina"
+                    android:text="@string/income"
+                    android:textSize="25sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/ExpenseBtn"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -75,7 +74,9 @@
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" >
+
+        </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
