--- a/app/src/main/res/drawable/gradient_greenish_bg.xml
+++ b/app/src/main/res/drawable/gradient_greenish_bg.xml
@@ -5,8 +5,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#bce8c8"
-                android:endColor="#85c7b5"
+                android:startColor="#129471"
+                android:endColor="#b8def2"
                 android:type="linear"/>
         </shape>
     </item>
