--- a/app/src/main/res/layout/botton_sheet_layout.xml
+++ b/app/src/main/res/layout/botton_sheet_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -67,6 +68,7 @@
                     android:background="@null"
                     android:contentDescription="@string/todo"
                     android:src="@mipmap/settings_foreground" />
+
             </TableRow>
 
         </TableLayout>
@@ -97,6 +99,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
