--- a/app/src/main/res/layout/activity_profile_activity.xml
+++ b/app/src/main/res/layout/activity_profile_activity.xml
@@ -27,6 +27,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:text="@string/edit_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
