--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,15 +13,15 @@
         android:layout_width="29dp"
         android:layout_height="27dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
+        app:layout_constraintBottom_toBottomOf="@+id/emailForReset"
+        app:layout_constraintEnd_toEndOf="@+id/emailForReset"
         app:layout_constraintHorizontal_bias="0.01"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintStart_toStartOf="@+id/emailForReset"
+        app:layout_constraintTop_toTopOf="@+id/emailForReset"
         app:srcCompat="@drawable/mail_logo" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/emailForReset"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="148dp"
