forgot password intent

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -37,61 +37,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/codeNumButton"
-        android:layout_width="320dp"
+        android:id="@+id/resetPassBtn"
+        android:layout_width="386dp"
         android:layout_height="50dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="260dp"
         android:background="@drawable/search_icon_bg"
         android:fontFamily="@font/roboto"
-        android:text="@string/send_code_number"
+        android:text="@string/get_new_password"
         android:textSize="24sp"
         app:cornerRadius="9dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="356dp"
-        android:autofillHints=""
-        android:backgroundTint="@color/sysLightBlue"
-        android:ems="10"
-        android:hint="@string/please_enter_received_code_number"
-        android:inputType="text|number"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="420dp"
-        android:background="@drawable/search_icon_bg"
-        android:fontFamily="@font/roboto"
-        android:text="@string/submit"
-        android:textSize="24sp"
-        app:cornerRadius="9dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/sendCodeStatement"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="276dp"
-        android:text="@string/did_not_received_click_here_to_send_a_code_again_after_60_seconds"
-        android:textColor="@color/sysLightBlue"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
