About us and Home

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,13 @@
     <color name="sysLightWhiteBlue">#cfdfda</color>
     <color name="sysLightGreen">#7cad3e</color>
     <color name="sysDarkGreen">#4a6c2f</color>
+    <color name="card1">#d4cbe5</color>
+    <color name="card2">#7adccf</color>
+    <color name="card3">#f7c59f</color>
+    <color name="card4">#b8d7f5</color>
+    <color name="card5">#e27c6f</color>
+    <color name="card6">#c9e3db</color>
+    <color name="card7">#86d098</color>
 
 </resources>
 
