--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -131,6 +131,7 @@
         android:layout_marginTop="460dp"
         android:fontFamily="@font/roboto"
         android:text="@string/by_creating_an_account_you_will_be_agreed_to_our_terms_conditions_and_privacy_policy"
+        android:textAlignment="center"
         android:textColor="@color/sysLightBlue"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
