--- a/app/src/main/res/layout/fragment_expense_input.xml
+++ b/app/src/main/res/layout/fragment_expense_input.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/rm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
